添加确认订单页面

--- a/cart.html
+++ b/cart.html
@@ -57,11 +57,11 @@
     </div>
 
     <!--订单状态栏-->
-    <div class="state_bar">
+    <div class="statebar">
         <ul>
-            <li class="on"><i>1</i>我的购物车</li>
-            <li><i>2</i>填写并核对订单信息</li>
-            <li><i>3</i>支付订单</li>
+            <li class="active statebar_cart"><i>1</i>我的购物车</li>
+            <li class="statebar_confirm"><i>2</i>填写并核对订单信息</li>
+            <li class="statebar_pay"><i>3</i>支付订单</li>
         </ul>
     </div>
 
@@ -150,7 +150,7 @@
 
 <!--猜你喜欢-->
 <div class="guess_like">
-    <h2><a href="#">热销商品</a></h2>
+    <h4><a href="#">猜你喜欢</a></h4>
     <div class="promo J_promo01 wrap">
         <div class="promo-main">
             <div class="promo-panel">
