--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉/dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -870,7 +870,7 @@
         <a href="#">
             <dl class="category_item">
                 <dt><img src="images/img2.jpg"></dt>
-                <dd>爱他美 Aptamil 金装2段12个月></dd>
+                <dd>爱他美 Aptamil 金装2段12个月</dd>
                 <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>          
             </dl>
@@ -880,7 +880,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉<</dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -945,7 +945,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉/dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -971,7 +971,7 @@
         <a href="#">
             <dl class="category_item">
                 <dt><img src="images/img2.jpg"></dt>
-                <dd>爱他美 Aptamil 金装2段12个月></dd>
+                <dd>爱他美 Aptamil 金装2段12个月</dd>
                 <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>        
             </dl>
@@ -981,7 +981,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉<</dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -1046,7 +1046,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉/dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -1072,7 +1072,7 @@
         <a href="#">
             <dl class="category_item">
                 <dt><img src="images/img2.jpg"></dt>
-                <dd>爱他美 Aptamil 金装2段12个月></dd>
+                <dd>爱他美 Aptamil 金装2段12个月</dd>
                 <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>         
             </dl>
@@ -1082,7 +1082,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉<</dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -1097,7 +1097,6 @@
         </a>
     </div>
 </div>
-
 
 <div class="category">
     <h2><a href="#">分类名称</a></h2>
@@ -1148,7 +1147,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉/dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
@@ -1174,7 +1173,7 @@
         <a href="#">
             <dl class="category_item">
                 <dt><img src="images/img2.jpg"></dt>
-                <dd>爱他美 Aptamil 金装2段12个月></dd>
+                <dd>爱他美 Aptamil 金装2段12个月</dd>
                 <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>      
             </dl>
@@ -1184,7 +1183,7 @@
             <dl class="category_item">
                 <dt><img src="images/img3.jpg"></dt>
                 <dd>爱他美 Aptamil 金装2段12个月</dd>
-                <dd>婴儿奶粉<</dd>
+                <dd>婴儿奶粉</dd>
                 <dd><span>￥89.00</span></dd>
             </dl>
         </a>
