--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,7 @@
     <!--头部logo-->
     <div class="header">
         <div class="logo">
-            <a href="#"><h1>中土世界</h1></a>
+            <a href="index.html"><h1>中土世界</h1></a>
         </div>
     </div>
 
@@ -143,7 +143,7 @@
             </div>
             <div class="ft_btn">
                 <a  class="keep_shopping" href="#"> 继续购物</a>
-                <a  class="pay" id="j_toPay" href="#">结算</a>
+                <a  class="pay" id="j_toPay" href="order.html">结算</a>
             </div>
         </div>
     </div>
