--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="header">
         <div class="wrap">
             <div class="logo">
-                <a href="#"><img src="images/logo.png"></a>
+                <a href="index.html"><img src="images/logo.png"></a>
             </div>
             <ul class="nav">
                 <li><a href="#">首页</a></li>
@@ -63,7 +63,7 @@
             <form>
                 <input class="hd_search" type="text" value="搜索"><input class="hd_search_btn" type="submit" value="">
             </form>
-            <div class="shopping_cart"><a href="#">购物车(<span>0</span>)</a></div>
+            <div class="shopping_cart"><a href="cart.html">购物车(<span>0</span>)</a></div>
         </div>
     </div>
 
