--- a/order.html
+++ b/order.html
@@ -49,7 +49,7 @@
     <!--头部logo-->
     <div class="header">
         <div class="logo">
-            <a href="#"><h1>中土世界</h1></a>
+            <a href="index.html"><h1>中土世界</h1></a>
         </div>
     </div>
 
